<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EEG Saver</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter filename.csv</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_namefiledate">Set Filename to Date</string>
    <string name="toggle_simulate">Simulate</string>
    <string name="button_record">Record</string>
    <string name="button_cue">Place Cue</string>
    <string name="title_log">Log</string>
    <string name="title_stat">Statistics</string>
    <string name="title_activity_main">EEG Saver : Collect</string>
    <string name="title_activity_save">EEG Saver : Save</string>
    <string name="title_progress">Uploading to Dropbox</string>
    
    <string name="link_button">Link to Dropbox</string>
    <string name="tab_log">Log</string>
    <string name="button_updatechart">Update</string>
    <string name="radio_timespace">Time space</string>
    <string name="radio_freqspace">Frequency Space</string>
    <string name="switch_verbose">Verbose</string>
</resources>
